--- a/teste-vite/package.json
+++ b/teste-vite/package.json
@@ -10,8 +10,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@types/styled-components": "^5.1.30",
+        "dayjs": "^1.11.10",
+        "framer-motion": "^10.16.4",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-feather": "^2.0.10",
+        "react-toastify": "^9.1.3",
+        "styled-components": "^6.1.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
